@@ -1,5 +1,5 @@
 AUX libdir.patch 812 RMD160 f94e10be81e16ba2d38f516ccab31071692f4976 SHA1 90a35d2410d1b57a4d3e848b4ebc42fe89192318 SHA256 25660ce2862869c5f78642681a3e37b09f5eda1642fe738db2351843840081d0
 AUX mkconfig.patch 521 RMD160 8abf30f7d4d9ecd25b31e60ec6e9355efcadaf99 SHA1 95512c34968e3bf825ca4af2e8a3b56eae2dc856 SHA256 e1d2174992dcc8c85a46b8d00c7e4649383ffea1cfcd405dea0d5578f78cca6f
 DIST ruby-enterprise-1.8.6-20081205.tar.gz 7100053 RMD160 82e7b7b1f18fb580b5ebb57aab2409d3f6519f2b SHA1 c40a86f33f12df106bc808a05b96a6e7f3c9303c SHA256 ef93f1240fc54e50663029f8f47da9dc6207de298acfdd1bb342d943d283f44b
-EBUILD ruby-enterprise-1.8.6.20081205.ebuild 854 RMD160 8714a824cd42118a0ec5f05923523410b47aaff6 SHA1 90e8b77629eb5bdf4ea9a9addce410679393f40d SHA256 68727feba402122021bff0c6806e43b3c3c61fe229ef7100aada3fdc3e871f88
-MISC ChangeLog 292 RMD160 20382956a272c5269051f3edd076d41aa21ef254 SHA1 dac69dffe924b9f22d4e0223ffe8aad7bc631048 SHA256 7393fe4e9e19d06f5d18051018e08b5eeb9926e88407a4544e9129cbc8014c9d
+EBUILD ruby-enterprise-1.8.6.20081205.ebuild 890 RMD160 ebe0e6ebc2f9164dc453851c9fe94a71aab13181 SHA1 21eca7d37cde71b98af71d03bc47f0dffa73797e SHA256 caccd401db37b8ad8f7280b69256a86787b1d121901233d145e837a1332646b8
+MISC ChangeLog 439 RMD160 97361abbbdebb431357fc75312737fcc2bee842d SHA1 ad5d047cde95bdd509c286b9c87e21a1c81c3027 SHA256 b82c7a6ff16c26fe344072d441998dd54874bdaebb3c1de40e73664402db915f
