@@ -2,6 +2,10 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  11 Dec 2008; Alex Legler <gentoo@a3li.info>
+  ruby-enterprise-1.8.6.20081205.ebuild:
+  Removing double whitespace and DEPENDing on eselect-ruby
+
   10 Dec 2008; Alex Legler <gentoo@a3li.info> +files/libdir.patch,
   +files/mkconfig.patch, +ruby-enterprise-1.8.6.20081205.ebuild:
   Initial ebuild, done by myself.
